<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamemain">


    <TableLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/table3"
        android:layout_below="@id/imageView12">

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/name_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name_tv"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/score_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Score"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/place_tv"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:textAlignment="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/place1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/one_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/firstName_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/firstScore_tv"/>

        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_weight="3"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/place2"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/two_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/secondName_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/secondScore_tv"/>

        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/place3"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/three_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/thirdName_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/thirdScore_tv"/>

        </TableRow>

    </TableLayout>
    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="409dp"
        android:layout_height="128dp"
        android:src="@drawable/tabledes"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/closeRecords"
        android:layout_width="42dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/xpressed" />
</RelativeLayout>